# agri_eye_ros2

./: README.md
local_sensing/: CMakeLists.txt  package.xml
local_sensing/config/: esp32-cam.yaml
local_sensing/scripts/: esp32cam_server.py
visual_odom/: CMakeLists.txt  package.xml
visual_odom/scripts/: send_pose.py
visual_odom/src/: data_aggregator.cpp
